[project]
name = "pythonanywhere-client"
description = "This is a Python library for interacting with the PythonAnywhere platform"
dynamic = ['version']
authors = [{ name = "sysproxy", email = "sysproxy64@gmail.com" }]
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.10"
dependencies = ["requests>=2.28.2", "selenium>=4.12.0"]

[project.optional-dependencies]
test = ["flake8>=6.0.0", "pytest>=7.2.2"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "pythonanywhere_client.__version__" }

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]